Opened 15 years ago
Closed 15 years ago
#373 closed defect (fixed)
e35c674d breaks alsa input
| Reported by: | llogan | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avdevice |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
e35c674d13a7f180412cfe058530a2e7f1d49a90 bad
8bfd7f6a475225a0595bf657f8b99a8fffb461e4 good
$ ./ffmpeg -v 9 -loglevel 99 -f alsa -ac 2 -i pulse -acodec pcm_s16le -y ~/output.mka
ffmpeg version N-31358-g2f56a97, Copyright (c) 2000-2011 the FFmpeg developers
built on Jul 30 2011 11:33:09 with gcc 4.5.2
configuration:
libavutil 51. 11. 0 / 51. 11. 0
libavcodec 53. 7. 0 / 53. 7. 0
libavformat 53. 5. 0 / 53. 5. 0
libavdevice 53. 2. 0 / 53. 2. 0
libavfilter 2. 24. 3 / 2. 24. 3
libswscale 2. 0. 0 / 2. 0. 0
[alsa @ 0xac4a360] All info found
[alsa @ 0xac4a360] Estimating duration from bitrate, this may be inaccurate
Input #0, alsa, from 'pulse':
Duration: N/A, start: 1312054761.614575, bitrate: N/A
Stream #0.0, 1, 1/1000000: Audio: pcm_s16le, 48000 Hz, 2 channels, s16, 1536 kb/s
Output #0, matroska, to '/home/lou/output.mka':
Metadata:
encoder : Lavf53.5.0
Stream #0.0, 0, 1/1000: Audio: pcm_s16le, 48000 Hz, 2 channels, s16, 1536 kb/s
Stream mapping:
Stream #0.0 -> #0.0
Press [q] to stop, [?] for help
[matroska @ 0xac45920] Writing block at offset 519, size 128, pts 0, dts 0, duration 1, flags 128
[matroska @ 0xac45920] Application provided invalid, non monotonically increasing dts to muxer in stream 0: 1 >= 1
av_interleaved_write_frame(): Invalid argument
This output is from 2f56a97f which merged the bad commit. 32-bit Ubuntu Natty. Current git master (g3b5ddf0) has the same behavior.
Change History (4)
comment:1 by , 15 years ago
| Status: | new → open |
|---|---|
| Summary: | e35c674d breaks alsa output in matroska → e35c674d breaks alsa input |
comment:2 by , 15 years ago
comment:3 by , 15 years ago
65536 seems to work with mic input. Anything less results in:
[matroska @ 0x2c40a80] Application provided invalid, non monotonically increasing dts to muxer in stream 0: 128 >= 128 av_interleaved_write_frame(): Invalid argument
comment:4 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Thanks, Fixed and will be pushed soon
Note:
See TracTickets
for help on using tickets.



which buffer size works for you ?