alsa: increase max buffer size Fixes Ticket373

Thanks to llogan for testing

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>