libavdevice/alsa-audio.h
@@ -43,7 +43,7 @@
 
 typedef void (*ff_reorder_func)(const void *, void *, int);
 
-#define ALSA_BUFFER_SIZE_MAX 32768
+#define ALSA_BUFFER_SIZE_MAX 65536
 
 typedef struct {
     AVClass *class;
